sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:4: error: ';' expected but '.' found.
  var ecart=(lgr.to.Double/2)to.Int
                               ^AlgShellSort:5: error: '(' expected but identifier found.
  while ecart>0:
        ^AlgShellSort:6: error: illegal start of simple expression
} 
^