sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  val lgr=getNombreValeurs()
  var ecart=(lgr.to.Double/2)to.Int
  while ecart>0:
}